# dnsRegistryAVS

./: .gitignore  Dockerfile  LICENSE  README.md
execution-service/: Cargo.toml  Dockerfile
execution-service/src/: main.rs
task-performer/: .env  Cargo.toml  Dockerfile
task-performer/src/: main.rs
validation-service/: Cargo.toml  Dockerfile
validation-service/src/: main.rs
