[package]
name = "execution-service"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.68"
regex = "1.5.4"
hickory-resolver = "0.24.1"
hickory-client = "0.24.1"

[[bin]]
name = "execution-service"
path = "src/main.rs"