[package]
name = "task-performer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.68"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
jsonrpc_client = { version = "*", features = ["reqwest", "surf", "isahc"] }
jsonrpc-core = "18.0.0"